# python-anticaptcha

./: .bumpversion.cfg  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  CODE_OF_CONDUCT.md  Dockerfile.docs  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini  unittest.cfg
.github/workflows/: dockerimage.yml  e2e.yml  greetings.yml  publish.yml  pythonpackage.yml
docs/: Makefile  api.rst  conf.py  development.rst  fields.rst  index.rst  usage.rst
examples/: app_stat.py  async_balance.py  async_recaptcha_request.py  async_turnstile_request.py  balance.py  callback_sniffer.js  custom_dot.py  custom_moderation.py  funcaptcha.py  funcaptcha_request.py  funcaptcha_selenium.py  funcaptcha_selenium_callback.py  hcaptcha_request.py  recaptcha.py  recaptcha3_request.py  recaptcha_request.py  recaptcha_selenium.py  recaptcha_selenium_callback.py  remote_image.py  squarenet.py  squarenet_validator.py  sync_antigate.py  sync_app_stat.py  sync_balance.py  sync_funcaptcha_request.py  sync_funcaptcha_selenium.py  sync_funcaptcha_selenium_callback.py  sync_hcaptcha_request.py  sync_hcaptcha_request_proxy.py  sync_recaptcha3_request.py  sync_recaptcha_request.py  sync_recaptcha_selenium.py  sync_recaptcha_selenium_callback.py  sync_remote_image.py  sync_text.py  sync_text_stream.py  sync_turnstile_request.py  sync_turnstile_request_proxy.py  text.py  text_stream.py
examples/real-cases/: entertainow.com.py  pointp.fr.py  similiarweb.py  swagbucks.com.py  tidal.py
python_anticaptcha/: __init__.py  _common.py  async_client.py  base.py  compat.py  exceptions.py  inputs.py  proxy.py  sync_client.py  tasks.py
tests/: test_async_client.py  test_base.py  test_examples.py  test_exceptions.py  test_inputs.py  test_proxy.py  test_sync_client.py  test_tasks.py
