[project]
name = "python-anticaptcha"
requires-python = ">=3.9"
dynamic = ["version", "description", "readme", "dependencies", "optional-dependencies"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring API keys and network access",
]
addopts = "-m 'not e2e'"
