[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "python-anticaptcha"
description = "Client library for solve captchas with Anticaptcha.com support."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["requests"]
dynamic = ["version"]
keywords = ["recaptcha", "captcha", "development"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/ad-m/python-anticaptcha"

[project.optional-dependencies]
async = ["httpx>=0.24"]
tests = ["pytest", "pytest-asyncio", "retry", "selenium"]
docs = ["sphinx", "sphinx-rtd-theme"]

[tool.setuptools.package-data]
python_anticaptcha = ["py.typed"]

[tool.setuptools-scm]
fallback_version = "0.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring API keys and network access",
]
addopts = "-m 'not e2e'"
